Overview of changes from 0.5.0-alpha (r2902 + local modifications)
==
* New features

  - Support 64-bit data models (storage-compact is not yet)

  - Add lacking character predicates and complete all R5RS character procedures

  - Add lacking string predicates and complete all R5RS string procedures

* Fixes

  - Make behavior of internal definitions strictly conforming to R5RS

  - Make C99-dependent stdint.h unneeded