@@ -8,6 +8,10 @@ Overview of changes from 0.5.0-alpha (r2902 + local modifications)
 
   - Add lacking string predicates and complete all R5RS string procedures
 
+  - Support constant vector (storage-compact is not yet)
+
+  - Add quote-less vector literal check
+
 * Fixes
 
   - Make behavior of internal definitions strictly conforming to R5RS
